Hidden Scroll Down Arrow On mobile, visibility to overide JS display use Added Correct ALT Text To Scroll Down Arrow
 On branch dev

 Changes to be committed:
	modified:   sass/screen.scss
	modified:   static/assets/stylesheets/screen.css
	modified:   static/index.html

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -346,25 +346,30 @@ body, html {
     left: 49%;
     z-index: -5;
     display: block;
+    visibility: visible;
 
     //Don't bother telling the user to scroll on a mobile device
     @include respond-to('mobile') {
         display: none;
+        visibility: hidden;
     }
 
     @include respond-to('small') {
         display: block;
+        visibility: visible;
     
     }
 
     @include respond-to('medium') {
         display: block;
+        visibility: visible;
 
     }
 
     @include respond-to('large') {
         display: block;
-        
+        visibility: visible;
+
     }
   
 }
